[gd_scene load_steps=9 format=2]

[ext_resource path="res://TitleScreen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Accessories/art/BluePhoenixLogo.png" type="Texture" id=2]
[ext_resource path="res://Accessories/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://TitleScreen/FullScreen.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 4
outline_color = Color( 0.180392, 0.486275, 0.909804, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0.180392, 0.486275, 0.909804, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0.180392, 0.486275, 0.909804, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
outline_color = Color( 0.180392, 0.486275, 0.909804, 1 )
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 240.0
margin_top = 180.0
margin_right = 1600.0
margin_bottom = 780.0

[node name="TextureRect" type="TextureRect" parent="Menu"]
margin_right = 1360.0
margin_bottom = 524.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -430.0
margin_right = 540.0
margin_bottom = -250.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Phoenix Rising"
align = 1
valign = 1

[node name="Author" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -334.0
margin_top = -60.0
margin_right = 334.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Criado por Mateus Agostinho dos Anjos"

[node name="FullScreen" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.541176, 0.733333, 1, 1 )

[node name="NewGame" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 250.0
margin_right = 100.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 0.0156863, 0.145098, 0.329412, 1 )
text = "Novo Jogo"
flat = true

[node name="LevelSelect" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = 320.0
margin_right = 135.0
margin_bottom = 380.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 0.0156863, 0.145098, 0.329412, 1 )
text = "Selecionar NÃ­vel"
flat = true
[connection signal="pressed" from="FullScreen" to="." method="_on_FullScreen_pressed"]
[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="LevelSelect" to="." method="_on_LevelSelect_pressed"]
